--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <h2><span>welcome</span> <span>to ovr</span></h2>
+    <h2><span>welcome</span> <span>to union b</span></h2>
     <h2><span>vans1s</span></h2>
 </body>
 </html>
